fix spacing on book detail list of citations

--- a/sitemedia/scss/base/page/_item.scss
+++ b/sitemedia/scss/base/page/_item.scss
@@ -262,29 +262,39 @@
 
 #citations-list {
   .collection .collection__item {
-    // @include grid-column(4);
-    // margin-left: 0;
+
     display: grid;
     grid-template-columns: repeat(6, 1fr);
     grid-template-areas: "body body body body image image";
     grid-gap: 30px;
+  
 
-    @include grid-media($large-medium-viewport-grid) {
-      // @include grid-column(12);
-      // margin-left: 0;
-    }
-
+  
     .item__image {
       grid-area: image;
       width: 100%;
     }
-
+  
     .item__body {
       grid-area: body;
       width: 100%;
     }
   }
 }
+
+#books-detail {
+
+  .collection .collection__item {
+    @include grid-column(4);
+    margin-left: 0;
+
+    @include grid-media($large-medium-viewport-grid) {
+      @include grid-column(12);
+      margin-left: 0;
+    }
+  }
+}
+
 
 .item-license {
   padding-top: 5em;
